eliminato quick search pattern, introdotte le informazioni sui field e sulle conditional expression, modificati alcuni pattern per includere le nuove informazioni su field e condizioni
Co-authored-by: Copilot <copilot@github.com>