@@ -3,7 +3,11 @@ package it.davide.xml;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -23,10 +27,19 @@ public class NewIFMLPatternExtractor {
     public class ComponentInfo {
         private String id;
         private String type;
+        private String objectId;
+        private Map<GraphNode.FieldElementCategory, Set<String>> fieldElementIds = new HashMap<>();
+        private Map<GraphNode.ConditionalExpressionCategory, Set<String>> conditionalExpressions = new HashMap<>();
 
-        public ComponentInfo(String id, String type) {
+
+        public ComponentInfo(String id, String type, String objectId,
+                Map<GraphNode.FieldElementCategory, Set<String>> fieldElementIds,
+                Map<GraphNode.ConditionalExpressionCategory, Set<String>> conditionalExpressions) {
             this.id = id;
             this.type = type;
+            this.objectId = objectId;
+            this.fieldElementIds = fieldElementIds;
+            this.conditionalExpressions = conditionalExpressions;
         }
 
         public String getId() {
@@ -35,6 +48,18 @@ public class NewIFMLPatternExtractor {
 
         public String getType() {
             return type;
+        }
+
+        public String getObjectId() {
+            return objectId;
+        }
+
+        public Map<GraphNode.FieldElementCategory, Set<String>> getFieldElementIds() {
+            return fieldElementIds;
+        }
+
+        public Map<GraphNode.ConditionalExpressionCategory, Set<String>> getConditionalExpressions() {
+            return conditionalExpressions;
         }
     }
 
@@ -55,11 +80,16 @@ public class NewIFMLPatternExtractor {
             "targetExpressionVariable",
             "blank");
 
-    private static List<String> navFlowParentElements = Arrays.asList("Form", "List", "Details", "Action",
+    private static final List<String> DATA_BINDINGS = List.of(
+            "class",
+            "classServiceRes");
+
+    private static List<String> navFlowParentElements = Arrays.asList("Form", "List", "Details", "Hierarchy",
             "ViewComponent");
 
     /**
      * collect the direct components under a view component
+     * 
      * @param viewComponents
      * @param components
      */
@@ -76,8 +106,25 @@ public class NewIFMLPatternExtractor {
 
                 String id = element.getAttribute("id");
 
+                NodeList dataBinding = element.getElementsByTagName("DataBinding");
+
+                Element dataBindingEl = (Element) dataBinding.item(0);
+
+                String objectId = dataBindingEl != null ? resolveAttribute(dataBindingEl, DATA_BINDINGS) : null;
+
+                Map<GraphNode.FieldElementCategory, Set<String>> fieldElementIds = new HashMap<>();
+                Map<GraphNode.ConditionalExpressionCategory, Set<String>> conditionalExpressions = new HashMap<>();
+
+                fieldElementIds.put(GraphNode.FieldElementCategory.Field, extractFieldIds(element, "Field"));
+                fieldElementIds.put(GraphNode.FieldElementCategory.SelectionField, extractFieldIds(element, "SelectionField"));
+
+                conditionalExpressions.put(GraphNode.ConditionalExpressionCategory.associationCondition, extractComponentConditions(element, "AssociationRoleCondition"));
+                conditionalExpressions.put(GraphNode.ConditionalExpressionCategory.attributeConditions, extractComponentConditions(element, "AttributesCondition"));
+                conditionalExpressions.put(GraphNode.ConditionalExpressionCategory.keyCondition, extractComponentConditions(element, "KeyCondition"));
+
                 if (id != null && !id.isEmpty()) {
-                    components.add(new ComponentInfo(id, element.getNodeName()));
+                    components.add(new ComponentInfo(id, element.getNodeName(), objectId,
+                            fieldElementIds, conditionalExpressions));
                 }
             }
         }
@@ -85,6 +132,7 @@ public class NewIFMLPatternExtractor {
 
     /**
      * extract the view components as couples of (id, type) from the IFML document
+     * 
      * @param document
      * @return List<ComponentInfo>
      */
@@ -94,10 +142,11 @@ public class NewIFMLPatternExtractor {
 
         Element root = document.getDocumentElement(); // <Page>
 
-        //get view components directly under the page tag
+        // get view components directly under the page tag
         NodeList pageChildren = root.getChildNodes();
 
-        //for each viewcomponent tag it gets the actual components (Form, List...) directly under it and adds them to the list of components
+        // for each viewcomponent tag it gets the actual components (Form, List...)
+        // directly under it and adds them to the list of components
         for (int i = 0; i < pageChildren.getLength(); i++) {
             Node node = pageChildren.item(i);
 
@@ -108,7 +157,8 @@ public class NewIFMLPatternExtractor {
             }
         }
 
-        // also get the components inside dialog pages, they are not directly under the page tag but they are still part of the model and can be involved in patterns
+        // also get the components inside dialog pages, they are not directly under the
+        // page tag but they are still part of the model and can be involved in patterns
         NodeList dialogPages = root.getElementsByTagName("DialogPage");
 
         for (int i = 0; i < dialogPages.getLength(); i++) {
@@ -131,7 +181,9 @@ public class NewIFMLPatternExtractor {
     }
 
     /**
-     * read the page files and extract the components to create the nodes of the global graph
+     * read the page files and extract the components to create the nodes of the
+     * global graph
+     * 
      * @param pagePaths
      * @param graph
      * @throws Exception
@@ -149,7 +201,10 @@ public class NewIFMLPatternExtractor {
             Document doc = builder.parse(new File(pagePath));
 
             getViewComponents(doc).forEach(component -> {
-                GraphNode node = new GraphNode(component.getId(), resolveNodeType(component.getType()), pageId);
+                GraphNode node = new GraphNode(component.getId(), resolveNodeType(component.getType()), pageId,
+                        component.getObjectId(),
+                        component.getFieldElementIds(),
+                        component.getConditionalExpressions());
 
                 graph.addNode(node);
             });
@@ -157,7 +212,9 @@ public class NewIFMLPatternExtractor {
     }
 
     /**
-     * resolve the type of the component to create the node of the graph, if the component is not recognized it will be classified as UNKNOWN
+     * resolve the type of the component to create the node of the graph, if the
+     * component is not recognized it will be classified as UNKNOWN
+     * 
      * @param component
      * @return NodeType
      */
@@ -171,13 +228,18 @@ public class NewIFMLPatternExtractor {
             return NodeType.LIST;
         if (component.equals("ViewContainer"))
             return NodeType.VIEW_CONTAINER;
+        if (component.equals("Hierarchy"))
+            return NodeType.HIERARCHY;
 
         return NodeType.UNKNOWN;
     }
 
     /**
-     * retrieve the source component id of a flow by traversing upward the parent nodes of the flow element until it finds a node that is a direct child of a view component
+     * retrieve the source component id of a flow by traversing upward the parent
+     * nodes of the flow element until it finds a node that is a direct child of a
+     * view component
      * if it doesn't find it returns null
+     * 
      * @param flow
      * @return String
      */
@@ -199,6 +261,7 @@ public class NewIFMLPatternExtractor {
 
     /**
      * check if the parameter binding is a passing binding
+     * 
      * @param el
      * @return boolean
      */
@@ -209,8 +272,10 @@ public class NewIFMLPatternExtractor {
 
     /**
      * gets the name of the source and target attributes of a parameter binding
-     * @param el element representing the parameter binding
-     * @param candidates list of possible attribute names for the source and target attributes of the parameter binding
+     * 
+     * @param el         element representing the parameter binding
+     * @param candidates list of possible attribute names for the source and target
+     *                   attributes of the parameter binding
      * @return String
      */
     private static String resolveAttribute(Element el, List<String> candidates) {
@@ -225,8 +290,50 @@ public class NewIFMLPatternExtractor {
         return null;
     }
 
+    private Set<String> extractComponentConditions(Element componentElement, String conditionType) {
+
+        NodeList condNodes = componentElement.getElementsByTagNameNS("*", conditionType);
+
+        if (condNodes.getLength() == 0)
+            return null;
+
+        Set<String> conditionIds = new HashSet<>();
+
+        for (int j = 0; j < condNodes.getLength(); j++) {
+            Element condEl = (Element) condNodes.item(j);
+
+            String condId = condEl.getAttribute("id");
+            if (condId != null && !condId.isEmpty()) {
+                conditionIds.add(condId);
+            }
+        }
+
+        return conditionIds;
+    }
+
+    private Set<String> extractFieldIds(Element componentElement, String tagName) {
+        NodeList fieldNodes = componentElement.getElementsByTagNameNS("*", tagName);
+
+        if (fieldNodes.getLength() == 0)
+            return null;
+
+        Set<String> fieldIds = new HashSet<>();
+
+        for (int i = 0; i < fieldNodes.getLength(); i++) {
+            Element fieldEl = (Element) fieldNodes.item(i);
+            String fieldId = fieldEl.getAttribute("id");
+            if (fieldId != null && !fieldId.isEmpty()) {
+                fieldIds.add(fieldId);
+            }
+        }
+
+        return fieldIds.isEmpty() ? null : fieldIds;
+    }
+
     /**
-     * read the page files and extract the flows to create the edges of the global graph
+     * read the page files and extract the flows to create the edges of the global
+     * graph
+     * 
      * @param pagePaths
      * @param graph
      * @throws Exception
@@ -241,7 +348,7 @@ public class NewIFMLPatternExtractor {
             try {
                 Document doc = builder.parse(new File(pagePath));
 
-                //gets all the navigation and data flows in the page
+                // gets all the navigation and data flows in the page
                 NodeList navNodeList = doc.getElementsByTagNameNS("*", "NavigationFlow");
                 NodeList dataNodeList = doc.getElementsByTagNameNS("*", "DataFlow");
 
@@ -257,7 +364,7 @@ public class NewIFMLPatternExtractor {
 
                     Element flowElement = documentFlows.get(i);
 
-                    //gets source and target components id
+                    // gets source and target components id
                     String sourceId = findSource(flowElement);
                     String targetId = flowElement.getAttribute("to");
 
@@ -270,11 +377,12 @@ public class NewIFMLPatternExtractor {
                             targetId,
                             type);
 
-                   
                     NodeList bindingNodes = flowElement.getElementsByTagNameNS("*", "ParameterBinding");
 
-                    // for each flow it gets the parameter bindings, if the binding is automatic it creates an edge binding with only the automatic flag set to true
-                    // otherwise it resolves the source and target attributes and creates an edge binding with all the information that will be used for pattern detection
+                    // for each flow it gets the parameter bindings, if the binding is automatic it
+                    // creates an edge binding with only the automatic flag set to true
+                    // otherwise it resolves the source and target attributes and creates an edge
+                    // binding with all the information that will be used for pattern detection
                     for (int j = 0; j < bindingNodes.getLength(); j++) {
 
                         Element bindingEl = (Element) bindingNodes.item(j);
@@ -291,7 +399,7 @@ public class NewIFMLPatternExtractor {
                             continue;
                         }
 
-                        //simply gets the source and target name attributes of the parameter binding
+                        // simply gets the source and target name attributes of the parameter binding
                         String sourceAttr = resolveAttribute(bindingEl, SOURCE_ATTRS);
                         String targetAttr = resolveAttribute(bindingEl, TARGET_ATTRS);
 
@@ -314,6 +422,7 @@ public class NewIFMLPatternExtractor {
 
     /**
      * create the global graph
+     * 
      * @param pagePaths
      * @return IFMLGraph
      * @throws Exception
@@ -329,6 +438,7 @@ public class NewIFMLPatternExtractor {
 
     /**
      * validate the graph by checking that all the edges reference existing nodes
+     * 
      * @param graph
      */
     private void validateGraph(IFMLGraph graph) {
